--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am in the UCSD Extension Coding Bootcamp.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am from the San Diego area.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Hiking, the beach, and food.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Software Engineer.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>San Diego, CA.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I think it would keep me interested by building or improving solutions.</p>
     </section>
 
     <footer id="footer">
